[project]
name = "eyetoo"
version = "0.1.0"
description = "Local on-demand image pipeline: background removal and upscaling."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Almost Efficient" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "pillow>=10",
  "rembg[cpu]>=2.0.67",
]

[project.urls]
Homepage = "https://github.com/AlmostEfficient/eyetoo"
Repository = "https://github.com/AlmostEfficient/eyetoo.git"

[project.scripts]
eyetoo = "eyetoo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
